// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputTextarea > should render > expected html 1`] = `
<div>
  <div
    class="form-group space-y-2"
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <textarea
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-textarea"
      id="test-id"
      name="test"
      rows="3"
    >
      default value
    </textarea>
  </div>
</div>
`;

exports[`InputTextarea > should render with error message > expected html 1`] = `
<div>
  <div
    class="form-group space-y-2"
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <span
      class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
      data-testid="input-error-test-id"
      id="input-test-id-error"
      role="alert"
    >
      error message
    </span>
    <textarea
      aria-errormessage="input-test-id-error"
      aria-invalid="true"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg focus:outline-hidden focus:ring-3 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70 border-red-500 focus:border-red-500 focus:ring-red-500"
      data-testid="input-textarea"
      id="test-id"
      name="test"
      rows="3"
    >
      default value
    </textarea>
  </div>
</div>
`;

exports[`InputTextarea > should render with help message > expected html 1`] = `
<div>
  <div
    class="form-group space-y-2"
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <textarea
      aria-describedby="input-test-id-help"
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-textarea"
      id="test-id"
      name="test"
      rows="3"
    >
      default value
    </textarea>
    <span
      class="block max-w-prose text-gray-500"
      data-testid="input-textarea-help"
      id="input-test-id-help"
    >
      help message
    </span>
  </div>
</div>
`;

exports[`InputTextarea > should render with required > expected html 1`] = `
<div>
  <div
    class="form-group space-y-2"
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
       
      <span
        aria-hidden="true"
      >
        (
        input-label.required
        )
      </span>
    </label>
    <textarea
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      aria-required="true"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-textarea"
      id="test-id"
      name="test"
      required=""
      rows="3"
    >
      default value
    </textarea>
  </div>
</div>
`;
